site: publish ike-example-ws 6